# naif-pds4-bundler

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  10_overview.html  11_introduction.html  12_bugs_contact_references.html  13_spice.html  20_spice_kernel_archive_description.html  21_naif_approach.html  22_pds4_spice_archive.html  30_spice_kernel_archive_preparation_guide.html  31_step_1_preparing_data.html  32_step_2_npb_setup.html  33_step_3_running_npb.html  34_step_4_checking_the_result.html  35_step_5_packaging_to_naif.html  36_step_by_step_summary.html  40_naif_pds4_bundler_user_guide.html  41_npb_installation.html  42_npb_configuration_file.html  43_using_npb.html  44_working_example.html  50_api_docs.html  60_annex_npb_for_pds3.html  CHANGELOG.md  LICENSE.txt  MANIFEST.in  NOTICE.txt  README.md  README.rst  genindex.html  index.html  modules.html  naif_pds4_bundler.classes.collection.html  naif_pds4_bundler.classes.html  naif_pds4_bundler.classes.label.html  naif_pds4_bundler.classes.product.html  naif_pds4_bundler.cli.html  naif_pds4_bundler.data.html  (+24 more)
.doctrees/: 10_overview.doctree  11_introduction.doctree  12_bugs_contact_references.doctree  13_spice.doctree  20_spice_kernel_archive_description.doctree  21_naif_approach.doctree  22_pds4_spice_archive.doctree  30_spice_kernel_archive_preparation_guide.doctree  31_step_1_preparing_data.doctree  32_step_2_npb_setup.doctree  33_step_3_running_npb.doctree  34_step_4_checking_the_result.doctree  35_step_5_packaging_to_naif.doctree  36_step_by_step_summary.doctree  40_naif_pds4_bundler_user_guide.doctree  41_npb_installation.doctree  42_npb_configuration_file.doctree  43_using_npb.doctree  44_working_example.doctree  50_api_docs.doctree  60_annex_npb_for_pds3.doctree  environment.pickle  index.doctree  modules.doctree  naif_pds4_bundler.classes.collection.doctree  naif_pds4_bundler.classes.doctree  naif_pds4_bundler.classes.label.doctree  naif_pds4_bundler.classes.product.doctree  naif_pds4_bundler.cli.doctree  naif_pds4_bundler.data.doctree  naif_pds4_bundler.doctree  naif_pds4_bundler.pipeline.doctree  naif_pds4_bundler.utils.doctree  naif_pds4_bundler.utils.types.doctree  pds.doctree  pds.naif_pds4_bundler.classes.doctree  pds.naif_pds4_bundler.doctree  pds.naif_pds4_bundler.utils.doctree  tests.doctree  tests.naif_pds4_bundler.doctree  (+3 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  i-t-bug-report.md  pds4-standards-change-request.md  refactor.md  task.md  vulnerability-issue.md
.github/workflows/: ci-builds-and-tests.yaml  ci-coverage.yaml  ci-python-matrix  ci-python-matrix.yaml  codeql-analysis.yml  pytest.yml  stable-cicd.yaml  unstable-cicd.yaml
_modules/: index.html
_sources/: 11_introduction.rst.txt  12_bugs_contact_references.rst.txt  13_spice.rst.txt  21_naif_approach.rst.txt  22_pds4_spice_archive.rst.txt  30_spice_kernel_archive_preparation_guide.rst.txt  31_step_1_preparing_data.rst.txt  32_step_2_npb_setup.rst.txt  33_step_3_running_npb.rst.txt  34_step_4_checking_the_result.rst.txt  36_step_by_step_summary.rst.txt  40_naif_pds4_bundler_user_guide.rst.txt  41_npb_installation.rst.txt  42_npb_configuration_file.rst.txt  43_using_npb.rst.txt  50_api_docs.rst.txt  naif_pds4_bundler.classes.collection.rst.txt  naif_pds4_bundler.classes.label.rst.txt  naif_pds4_bundler.classes.product.rst.txt  naif_pds4_bundler.classes.rst.txt  naif_pds4_bundler.cli.rst.txt  naif_pds4_bundler.data.rst.txt  naif_pds4_bundler.pipeline.rst.txt  naif_pds4_bundler.rst.txt  naif_pds4_bundler.utils.rst.txt  naif_pds4_bundler.utils.types.rst.txt  pds.naif_pds4_bundler.classes.rst.txt  pds.naif_pds4_bundler.rst.txt  pds.naif_pds4_bundler.utils.rst.txt  pds.rst.txt  tests.naif_pds4_bundler.functional.rst.txt  tests.naif_pds4_bundler.regression.rst.txt  tests.naif_pds4_bundler.rst.txt  tests.naif_pds4_bundler.unittests.rst.txt  tests.rst.txt
_static/: theme_overrides.css
docs/: conf.py  index.rst  npb_worklist.txt  paper.bib  paper.md  spice_archiving_guide.txt  worklist.txt
docs/source/: 01_overview.rst  02_installation_and_setup.rst  02_pds4_spice_kernel_bundle.rst  02_pds4_spice_kernel_bundles.rst  03_installation_and_setup.rst  03_pds4_archiving_guide.rst  03_pds4_spice_kernel_bundles.rst  04_naif_pds4_bundle_generator.rst  04_pds3_archiving_guide.rst  04_spice_archive_preparation_guide.rst  05_pds3_spice_kernel_data_sets.rst  10_npb_operation.rst  10_overview.rst  10_pds3_to_pds4_migration.rst  11_introduction.rst  12_bugs_contact_references.rst  13_spice.rst  20_api_docs.rst  20_main.rst  20_spice_kernel_archive_description.rst  21_classes.rst  21_main.rst  21_naif_approach.rst  22_pds4_spice_archive.rst  22_utils.rst  23_utils.rst  30_api_docs.rst  30_spice_kernel_archive_preparation_guide.rst  31_classes.rst  31_step_1_preparing_data.rst  32_step_2_npb_setup.rst  32_utils.rst  33_step_3_running_npb.rst  34_step_4_checking_the_result.rst  35_step_5_packaging_to_naif.rst  36_step_by_step_summary.rst  40_development.rst  40_naif_pds4_bundler_user_guide.rst  41_npb_installation.rst  42_npb_configuration_file.rst  (+28 more)
npb/: main.py
npb/classes/: bundle.py  collection.py  label.py  list.py  log.py  product.py  setup.py
npb/config/: insight_kernel_list.json  insight_metakernel.grammar  insight_metakernel.tm  insight_spiceds.html  m01_kernel_list.json  msl_kernel_list.json  msl_mission_template_pds.1  registered_context_products.json
npb/etc/: registered_context_products.json  template_bundle.xml  template_collection_document.xml  template_collection_spice_kernels.xml  template_kernel_list.txt  template_metakernel.tm  template_product_html_document.xml  template_product_spice_kernel.xml  template_product_spice_kernel_mk.xml  template_readme.txt  template_spiceds.html
npb/exe/: label_them_all.pl  maklabel.linux  maklabel.macos  mkpdssum.pl  xfer_index.pl
npb/templates/: configuration.xsd  registered_context_products.json  template_collection_document.xml  template_kernel_list.txt  template_metakernel.tm  (+1 more)
tests/: __init__.py
(+1794 files in other folders)
