[build-system]
requires = ["setuptools>=75.3.4,<81"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Specify the directories where pytest will look for tests
testpaths = ["tests/npb"]

addopts = "-n auto --cov=pds --import-mode=importlib"

# Ensure pytest recognizes your unittest-style tests
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
