[metadata]
name = naif-pds4-bundler
author = Marc Costa Sitja, Alyssa M Bailey (NAIF/JPL)
author_email = alyssa.m.bailey@jpl.nasa.gov
description = NAIF PDS4 Bundler (naif-pds4-bundler) is a software package that generates a PDS4 SPICE archives.
long_description = file: README.md
long_description_content_type = text/markdown
version = file: src/pds/naif_pds4_bundler/VERSION.txt
license = apache-2.0
keywords = pds, planetary data, various, other, keywords
url = https://github.com/NASA-PDS/naif-pds4-bundler
download_url = https://github.com/NASA-PDS/naif-pds4-bundler/releases/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix


[options]
install_requires =
    spiceypy>=4.0.2
    beautifulsoup4>=4.9.3
    setuptools>=50.3.0
    nose
    coverage
    xmlschema
    requests
# Change this to False if you use things like __file__ or __path__—which you
# shouldn't use anyway, because that's what ``pkg_resources`` is for 🙂
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.8
namespace_packages = pds

[options.extras_require]
dev =
    pep8-naming
    mypy
    pydocstyle
    coverage
    pytest
    pytest-cov
    pytest-watch
    pytest-xdist
    pre-commit
    sphinx
    sphinx-rtd-theme
    tox
    types-setuptools

[options.entry_points]
console_scripts =
    naif-pds4-bundler=pds.naif_pds4_bundler.__main__:main
    npb=pds.naif_pds4_bundler.__main__:main

[options.packages.find]
where = src


[coverage:run]
omit = */_version.py,*/__init__.py

[test]


[tool:pytest]
addopts = -n auto --cov=pds


[install]


[mypy]
# The generic ``mypy`` settings are blank for now, but there are more specific
# options below. Note that the section syntax for ``mypy`` includes
# glob-style wildcards to match file patterns.
